--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "jimao-services",
   "version": "0.1.0",
   "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "dev": "node dist/index.js"
+  },
   "repository": "https://github.com/wrule/jimao-services.git",
   "license": "MIT",
   "private": false
