--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "repository": "https://github.com/wrule/jimao-services.git",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2"
+  }
 }
