--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": false,
   "dependencies": {
     "@types/express": "^4.17.17",
+    "alchemy-sdk": "^2.9.0",
     "express": "^4.18.2"
   }
 }
