--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "alchemy-sdk": "^2.9.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
