--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "alchemy-sdk": "^2.9.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
